<resources>
    <string name="main">财付通</string>
    <string name="app_name">财付通</string>
    <string name="login">系统登录</string>
    <string name="addoutaccount">新增支出</string>
    <string name="addinaccount">新增收入</string>
    <string name="outaccountinfo">我的支出</string>
    <string name="inaccountinfo">我的收入</string>
    <string name="showinfo">数据管理</string>
    <string name="sysset">更改密码</string>
    <string name="accountflag">新增便签</string>
    <string name="infomanage">收支管理</string>
    <string name="flagmanage">便签管理</string>
    <string name="flaginfo">便签信息</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="set">设置</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="back">返回</string>
    <string name="log_in">登录</string>
    <string name="regist">注册</string>
    <string name="flaghint">请输入便签,最多输入200字</string>
    <string name="pwdhint">请输入密码</string>
    <string name="pwdconf">请确认密码</string>
    <string name="usernamehint">请输入用户名</string>
    <string name="namepwdhint">请输入用户名和密码</string>
    <string name="addflag">新增便签</string>
    <string name="mark">备注:</string>
    <string name="defaulttime">2014&#8211;01&#8211;01</string>
    <string name="defaultmoney">0.00</string>
    <string name="address">地点:</string>
    <string name="payer">付款方:</string>
    <string name="imagedesc">功能图像</string>
    <string name="ammount">金额:</string>
    <string name="type">类别:</string>
    <string name="delete">删除</string>
    <string name="time">时间:</string>
    <string name="incomeinfo">收入信息</string>
    <string name="expendinfo">支出信息</string>
    <string name="change">修改</string>
    <string name="newincome">新增收入</string>
    <string name="newexpend">新增支出</string>
    <string name="expendmanage">支出管理</string>

</resources>
