<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5dp"
	>
	<TextView android:id="@+id/tvPwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center_horizontal"
		android:text="@string/namepwdhint"
		android:textSize="25sp"
		android:textColor="#8C6931"
	/>
	<EditText android:id="@+id/txtUserID"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/tvPwd"
		android:inputType="textPassword"
		android:hint="@string/usernamehint"
	/>
	<EditText android:id="@+id/txtPwd"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtUserID"
		android:inputType="textPassword"
		android:hint="@string/pwdhint"
	/>
	<Button android:id="@+id/btnsetCancle"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtPwd"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="10dp"
		android:text="@string/cancle"
	/>
	<Button android:id="@+id/btnsetReset"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtPwd"
		android:layout_toLeftOf="@id/btnsetCancle"
		android:text="@string/reset"
	/>
	<Button android:id="@+id/btnConf"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtPwd"
		android:layout_toLeftOf="@id/btnsetReset"
		android:text="@string/confirm"
	/>	
</RelativeLayout>