<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5dp"
	>
	<TextView android:id="@+id/tvLogin"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center_horizontal"
		android:text="@string/namepwdhint"
		android:textSize="25sp"
		android:textColor="#8C6931"
	/>
	<EditText android:id="@+id/txtLoginName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/tvLogin"
		android:inputType="text"
		android:hint="@string/usernamehint"
	/>
	<EditText android:id="@+id/txtLoginPwd"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtLoginName"
		android:inputType="textPassword"
		android:hint="@string/pwdhint"
	/>
	<Button android:id="@+id/btnClose"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtLoginPwd"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="10dp"
		android:text="@string/cancle"
	/>
	<Button android:id="@+id/btnRegist"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtLoginPwd"
		android:layout_toLeftOf="@id/btnClose"
		android:text="@string/regist"
	/>	
	<Button android:id="@+id/btnLogin"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtLoginPwd"
		android:layout_toLeftOf="@id/btnRegist"
		android:text="@string/log_in"
	/>	
</RelativeLayout>
