<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5dp"
	>
	<TextView android:id="@+id/chPwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center_horizontal"
		android:text="@string/pwdhint"
		android:textSize="25sp"
		android:textColor="#8C6931"
	/>
	<EditText android:id="@+id/txtChPwd"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/chPwd"
		android:inputType="textPassword"
		android:hint="@string/pwdhint"
	/>
	<EditText android:id="@+id/txtChPwdConf"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtChPwd"
		android:inputType="textPassword"
		android:hint="@string/pwdhint"
	/>
	<Button android:id="@+id/btnChPwdCancel"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtChPwdConf"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="10dp"
		android:text="@string/cancle"
	/>
	<Button android:id="@+id/btnChPwdConf"
		android:layout_width="90dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtChPwdConf"
		android:layout_toLeftOf="@id/btnChPwdCancel"
		android:text="@string/confirm"
	/>	
</RelativeLayout>