<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/iteminfo" android:orientation="vertical"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:layout_marginTop="5sp"
	android:weightSum="1">
	<LinearLayout android:id="@+id/linearLayout1"
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:orientation="vertical" 
			android:layout_weight="0.06">
		<RelativeLayout android:layout_height="wrap_content" 
			android:layout_width="match_parent">
		<Button android:id="@+id/btnoutinfo" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="#8C6931"
			android:text="@string/expendinfo"
		/>
		<Button android:id="@+id/btnininfo"			
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/btnoutinfo"
			android:textSize="20sp"
			android:textColor="#8C6931"
			android:text="@string/incomeinfo"
			/>
		<Button android:id="@+id/btnflaginfo"			
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/btnininfo"
			android:textSize="20sp"
			android:textColor="#8C6931"
			android:text="@string/flaginfo"
			/>
		</RelativeLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/linearLayout2"
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:orientation="vertical" 
			android:layout_weight="0.88">
		<ListView android:id="@+id/lvinfo" 
			android:layout_width="match_parent" 
			android:layout_height="match_parent"
			android:scrollbarAlwaysDrawVerticalTrack="true"
			/>
		</LinearLayout>
		<LinearLayout android:id="@+id/linearLayout3"
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:orientation="vertical" 
			android:layout_weight="0.06">
			<RelativeLayout android:layout_height="wrap_content" 
				android:layout_width="match_parent">
			    <Button android:id="@+id/btnreturn"			
				android:layout_width="80dp" 
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:text="@string/back"
				/>
		    </RelativeLayout>
		</LinearLayout>
</LinearLayout>
